--- a/Orders.Infrastructure/Orders.Infrastructure.csproj
+++ b/Orders.Infrastructure/Orders.Infrastructure.csproj
@@ -1,17 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp5.0</TargetFramework>
+        <TargetFramework>netstandard2.1</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.4" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.13" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.13" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Order.Application\Order.Application.csproj" />
       <ProjectReference Include="..\Orders.Domain\Orders.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Persistence\Migrations" />
     </ItemGroup>
 
 </Project>
